<resources>
    <string name="app_name">Design</string>
    <string name="title_home">Artist</string>
    <string name="title_dashboard">Albums</string>
    <string name="title_notifications">Playlist</string>
    <string name="songs_string">Songs</string>
    <string name="message">Click on menu for Menu Demo</string>
    <string name="bookmark">Bookmark</string>
    <string name="speaker">Speaker</string>
    <string name="downloads">Downloads</string>
    <string name="recommendations">Recommendations</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
</resources>
