<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/bookmark_menu"
        android:title="@string/bookmark"
        app:showAsAction="always"
        android:icon="@drawable/ic_mic"/>
    <item android:id="@+id/speaker"
        android:icon="@drawable/ic_mobile"
        app:showAsAction="always" />
    <item android:id="@+id/downloads"
        android:title="@string/downloads"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/recommendations"
        android:title="@string/recommendations"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="ifRoom" />
</menu>